added missing slot length calculation

--- a/simulation_result_analysis.ipynb
+++ b/simulation_result_analysis.ipynb
@@ -27,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from strategy_simulation import Simulation, SimulationOptions"
    ]
@@ -270,8 +271,211 @@
    "outputs": [],
    "source": [
     "# We can now go through each stock in line and pairwise compare the indices of status switches.\n",
-    "# This should give us an idea of the length of the stopped data.\n"
+    "# This should give us an idea of the length of the stopped data.\n",
+    "stock_missing_data_lengths = {}\n",
+    "for k, stock in enumerate(sim.prices):\n",
+    "    stock_starts_with_nan = np.isnan(sim.prices[stock].iloc[0])\n",
+    "    \n",
+    "    # Get the switching dates and convert them to datetime (two lines, for readability ;) ):\n",
+    "    switching_dates = sim.prices.index[1:][status_switch[:, k]].values\n",
+    "    switching_dates = np.asarray([np.datetime64(d) for d in switching_dates])\n",
+    "    \n",
+    "    # Compare the date-pairs:\n",
+    "    date_differences = [\n",
+    "        ((switching_dates[k + 1] - switching_dates[k]) / np.timedelta64(1, 'D')).astype(int) \n",
+    "        for k in range(int(stock_starts_with_nan), len(switching_dates) - 1 + int(stock_starts_with_nan), 2)\n",
+    "    ]\n",
+    "\n",
+    "    stock_missing_data_lengths[stock] = date_differences"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CMI_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'VNO_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'TMO_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CMCSA_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AMD_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'NEM_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'TPR_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'BF-B_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BLK_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'DUK_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ZBRA_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'D_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'TSN_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'TJX_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CERN_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CINF_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AEE_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'WDC_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WMT_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CMS_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AOS_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WELL_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BEN_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BAX_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'TFX_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'NI_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'VRTX_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'TSCO_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CHD_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AEP_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BIIB_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'LH_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'XRAY_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ADP_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BBY_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'NEE_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AMAT_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CPRT_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WBA_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BXP_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'AMZN_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'ABMD_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WM_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ABT_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'NKE_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'DRE_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AAPL_prices': [1, 1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ALL_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'VTR_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'NVR_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'DXC_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'NTRS_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'APD_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CAT_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'NOC_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AFL_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'A_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'ALK_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ADM_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'NUE_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AVB_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ALXN_prices': [1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'MTD_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'COP_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'MSI_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BMY_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BKNG_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'COO_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WMB_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ATVI_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'LNC_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WEC_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AES_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BLL_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'MXIM_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'APA_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CHRW_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'ADSK_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ZION_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CB_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'LLY_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'TROW_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'MTB_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'NWL_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WAB_prices': [1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CDNS_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WHR_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'XEL_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ADBE_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BDX_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BA_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'DRI_prices': [1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'XLNX_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BKR_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AZO_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BAC_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'XOM_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AKAM_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'BWA_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'TRV_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AMGN_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CAH_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'NSC_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WRB_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ABC_prices': [3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'NTAP_prices': [1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'TGT_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'COF_prices': [1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'DVA_prices': [1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AON_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'LIN_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CCL_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BK_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CCI_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'ARE_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'BSX_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'DVN_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ADI_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'LMT_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'APH_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'C_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BRK-B_prices': [1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'COST_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AXP_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CL_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'MS_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'COG_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'YUM_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'AME_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'MSFT_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WAT_prices': [1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AMT_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'NOV_prices': [1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ALB_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'DTE_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'MRO_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AIG_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'MU_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'T_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AVY_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CLX_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ANSS_prices': [1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ATO_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ODFL_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CMA_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'NLOK_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'ALGN_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'VTRS_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CI_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CNP_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'BIO_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'AJG_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'LHX_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CAG_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WFC_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'CPB_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WY_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'VZ_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'XRX_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'WST_prices': [1, 1, 1, 3, 1, 1, 1, 1, 1, 5, 2, 1, 1, 1, 1],\n",
+       " 'VRSN_prices': [5, 2, 1, 1, 1, 1],\n",
+       " 'NVDA_prices': [5, 2, 1, 1, 1, 1]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_missing_data_lengths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
