Some more analysis on missing data lengths.

--- a/simulation_result_analysis.ipynb
+++ b/simulation_result_analysis.ipynb
@@ -27,6 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import operator\n",
+    "import functools\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from strategy_simulation import Simulation, SimulationOptions"
@@ -468,6 +470,34 @@
    ],
    "source": [
     "stock_missing_data_lengths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1, 2, 3, 5]), array([1751,  162,  135,  162]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_missing_data_lengths = functools.reduce(operator.iconcat, [v for k, v in stock_missing_data_lengths.items()], [])\n",
+    "np.unique(all_missing_data_lengths, return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All missing data slots are not longer than a week, and 70+% are just one day."
    ]
   },
   {
