Slight aesthetical changes and split up notebooks for a more concise analysis.

--- a/analytics/missing-price-impact.ipynb
+++ b/analytics/missing-price-impact.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pretty front-end for the simulation and the run-result's analysis.\n",
-    "\n",
-    "Imports the functions from the source-files and persists the outputs for easier perusing."
+    "There are a few instances, where prices are missing. We want to know how often they occur and how severe they are.\n"
    ]
   },
   {
@@ -18,7 +16,11 @@
     "# We want to reload all modules before execution, each time, as we do not care about performance\n",
     "# but easy development and we will be changing the modules a ton:\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "sys.path.append(os.environ.get('BLACK_SWAN_PATH'))"
    ]
   },
   {
@@ -43,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 220 stocks from prices.\n",
+      "Loaded 220 stocks from /home/notger-heinz/projects_and_analysis/black_swan_strategy/prices.\n",
       "2 stocks were rejected for reason of having less than 1000 entries.\n",
       "After filtering out 4192 rows with weird date formats, 10552 rows remain.\n",
       "After removal of discontinuous stock price lists was skipped, 218 stocks are left.\n",
@@ -344,120 +346,6 @@
    "metadata": {},
    "source": [
     "All missing data slots are not longer than a week, and 70+% are just one day."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Dry-run of the simulation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished calculating the yearly sigmas.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1dc8e83ebab74f23a6958c87118d14ce",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=10.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "sim.run(random_subset_size=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for stock in sim.payouts:\n",
-    "    payouts = sim.payouts[~sim.sigmas[stock].isna()][stock]\n",
-    "    normed_stock_prices = sim.prices[~sim.sigmas[stock].isna()][stock]\n",
-    "    normed_stock_prices -= normed_stock_prices.min()\n",
-    "    normed_stock_prices /= normed_stock_prices.max()\n",
-    "    normed_stock_prices *= payouts.max()\n",
-    "    tag = 'WIN' if payouts.mean() > 0 else 'LOSS'\n",
-    "    percentage_of_positive_days = (payouts > 0.0).sum() / len(payouts)\n",
-    "    \n",
-    "    fig = plt.subplots()\n",
-    "    payouts.plot()\n",
-    "    normed_stock_prices.plot()\n",
-    "    plt.title(f'RoI = {payouts.mean():.2f} for {stock} ({tag}, {percentage_of_positive_days:.3f})')\n",
-    "    plt.legend(['RoI', 'normed stock price'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# RoI (in 1) per stock:\n",
-    "sim.payouts.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Variation of RoI (in 1) = risk of picking only one stock:\n",
-    "sim.payouts.mean().std()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Total RoI (in 1) over all stocks:\n",
-    "sim.payouts.mean().mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Share of worthwhile days / share of loss days:\n",
-    "print('Share of winning days in %:')\n",
-    "for stock in sim.payouts:\n",
-    "    payouts = sim.payouts[~sim.sigmas[stock].isna()][stock]\n",
-    "    percentage_of_positive_days = (payouts > 0.0).sum() / len(payouts)\n",
-    "    print(f'{stock}: {percentage_of_positive_days * 100:.1f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Share of winning stocks:\n",
-    "print(f'{100 * (sim.payouts.mean() > 0).sum() / len(sim.payouts.columns)} % of stocks were winners.')"
    ]
   },
   {
